--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -119,7 +119,20 @@ display.scroll(message)
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
-    
+    1.코드 언어: 파이썬(python)
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수: microbit, time
+    3.포함될 파이썬 문법:  문자열 출력 연산, 마이크로 비트 라이브러리의 button_a.get_presses() 함수 활용
+    4.사용하지 않는 문법: if , for,  while,  def(), 문자열 포멧팅은 코드에서 사용하지 않음.
+    5.코드 플래싱 시 마이크로 비트 최종 작동 모습: 마이크로 비트 코드가 실행되면 10초동안 기계가 작동함. 작동하는 10초동한 a,b버튼을  누른 횟수를 button_a.get_presses() 및 button_b.get_presses()함수를 활용하여 카운팅하여 문자열 연산으로 출력
+    6.수정 할 샘플 코드: 아래 샘플 코드의 맥락을 수정하여 '최종 작동 모습'을 구현
+    #이해하기 샘플코드 3번
+    from microbit import *
+    temperature_reading = temperature()
+    sound_level = microphone.sound_level()
+    message = 'Temp: ' + str(temperature_reading) + 'C, ' + 'Sound: ' + str(sound_level) + ' dB'
+    display.scroll(message)
+    7.추가 요청 사항_01: 주석 포함
+    8.추가 요청 사항_02: 초등학생이 이해할 수 있는 수준의 알고리즘 패턴으로 설계 
     ```
   - GPT 초기 생성 코드
     ```
