--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -217,13 +217,13 @@ while True:
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
-  
+    
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    #시리얼 창에 1,2,3번 누르면 조도, 온도, 사운드를 측정하는 상태로 변화되는 기기기
     ```
   - GPT생성 코드
     ```
-   
+    
     ```
