--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -217,13 +217,82 @@ while True:
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
-    
+    #커스텀 인스트럭션을 입력한 후, 챕터 1에서 사용했던 프롬프트를 다시 사용해 본다. 
+    1.파이썬 코드:
+    2.수정요구사항:
+    3.추가요구사항:
     ```
+ 
   - GPT 프롬프트 템플릿 입력 내용
-    ```
-    #시리얼 창에 1,2,3번 누르면 조도, 온도, 사운드를 측정하는 상태로 변화되는 기기기
-    ```
-  - GPT생성 코드
-    ```
+     ```
+
+    다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
+    1.파이썬 코드= 
+     1) 1번 코드
+    from microbit import *
     
+    while True:
+        lv = microphone.sound_level()
+        if 0 <= lv <70:
+            print('sound_level:{}, silent'.format(lv))
+            sleep(1000)
+        elif 70 <= lv <125:
+            print('sound_level:{}, quiet'.format(lv))
+            sleep(1000)
+        elif 125 <= lv <190:
+            print('sound_level:{}, noise'.format(lv))
+            sleep(1000)
+        elif 190 <= lv <255:
+            print('sound_level:{}, too loud'.format(lv))
+            sleep(1000)
+     2) 2번 코드
+    from microbit import *
+    
+    while True:
+        light_lv = display.read_light_level() #조도값 범위: 0-255
+        if button_a.was_pressed() and button_b.was_pressed():
+            print('현재 조도 값은 {}입니다.'.format(light_lv))
+            display.scroll('lgth_lv: {}.'.format(light_lv))
+            sleep(1000)
+        
+        elif pin_logo.is_touched():
+            print('낮인지 밤인지 판단 중입니다.')
+            display.scroll('Determining day and night')
+            sleep(1000)
+        elif light_lv >= 0 and light_lv < 100:
+            print('현재는 밤 입니다.')
+            display.scroll('nighttime')
+            sleep(1000)
+        elif light_lv >= 100 and light_lv <= 255:
+            print('현재는 낮 입니다.')
+            display.scroll('Daytime')
+            sleep(1000)
+    2.수정요구사항=  마이크로 비트 시리얼 창에 숫자 1,2,3을 입력하면  조도, 온도, 사운드를 각각 측정하는 상태로 변화되는 기기기
+    3.추가요구사항= if 문만 사용
+    ```
+
+   - GPT생성 코드
+    ```
+        from microbit import *
+    
+    while True:
+        command = input()
+        
+        if command == '1':
+            # 조도 측정
+            light_level = display.read_light_level()
+            print('조도 측정: {}'.format(light_level))
+            sleep(1000)
+        
+        elif command == '2':
+            # 온도 측정
+            temperature = temperature()
+            print('온도 측정: {}C'.format(temperature))
+            sleep(1000)
+        
+        elif command == '3':
+            # 사운드 측정
+            sound_level = microphone.sound_level()
+            print('사운드 측정: {}'.format(sound_level))
+            sleep(1000)
     ```
