--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -295,4 +295,7 @@ while True:
             sound_level = microphone.sound_level()
             print('사운드 측정: {}'.format(sound_level))
             sleep(1000)
+
+        else:
+            print('입력 값의 범위를 벗어났습니다.)
     ```
