--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -95,7 +95,7 @@ elif score < 101:
     display.show(Image.ANGRY)
     music.play(music.POWER_UP)
     print('합격 입니다.')
-elif:
+else:
     display.show(Image.HAPPY)
     print('입력 점수 범위를 벗어났습니다.')
 ```
