--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -3,6 +3,46 @@
 ### 실습제목입력
 * 샘플코드_01
 ```
+from microbit import *
+import music
+
+print('국어, 영어, 수학 시험 합격 여부를 판단합니다.')
+subject = input('과목을 선택해주세요(1은 국어, 2는 영어, 3은 수학입니다.')
+score = 0 
+if subject == '1':
+    score = int(input('국어 점수를 입력해주세요.'))
+    if score >=50:
+        print('합격입니다. 축하합니다.')
+        music.play(music.POWER_UP)
+        
+        
+    else:
+        print('불합격입니다.')
+        music.play(music.POWER_DOWN)
+        
+
+if subject == '2':
+    score = int(input('영어 점수를 입력해주세요.'))
+    if score >=50:
+        print('합격입니다. 축하합니다.')
+        music.play(music.POWER_UP)
+        
+        
+    else:
+        print('불합격입니다.')
+        music.play(music.POWER_DOWN)
+        
+
+if subject == '3':
+    score = int(input('수학 점수를 입력해주세요.'))
+    if score >=50:
+        print('합격입니다. 축하합니다.')
+        music.play(music.POWER_UP)
+        
+        
+    else:
+        print('불합격입니다.')
+        music.play(music.POWER_DOWN)
 ```
 ### 실습제목입력
 * 샘플코드_02
