--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -47,6 +47,30 @@ if subject == '3':
 ### 실습제목입력
 * 샘플코드_02
 ```
+from microbit import *
+
+#토글 스위치란? 일반적으로 두 가지 상태를 전환하는 스위치. 아래 코드는 버튼을 누를 때 마다 상태가 바뀐다. 즉, On과 Off를 1개의 버튼으로 번갈아 하는 스위치라고 할 수 있다.
+on_a = False
+on_b = False
+
+while True:
+    
+    if button_a.was_pressed():
+        on_a = not on_a
+        sleep(200)
+    if on_a:
+        display.show(1)
+        sleep(200)
+
+    if button_b.is_pressed():
+        on_b = not on_b
+        sleep(200)
+    if on_b:
+        display.show(1)
+        sleep(200)
+
+    else:
+        display.show(0)
 ```
 
 
