--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -77,6 +77,45 @@ while True:
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
+from microbit import *
+import power
+
+while True:
+    num = input('전광판은 1, 계산기는 2를 선택해주세요. 기기 종료는 3을 압력해주세요:')
+    if button_a.was_pressed() or num =='1':
+        print('마이크로 비트 LED 전광판입니다.')
+        word_A = input("LED에 디스플레이 할 내용을 영어로 입력해주세요.")
+        while True:
+            display.scroll(word_A)
+            sleep(1500)
+            break
+    if button_b.was_pressed() or num =='2':
+        print('마이크로 비트 사칙연산 계산기 입니다.')
+        cal_num = input("덧셈 1, 뺄셈 2, 곱셈 3, 나눗셈 4, 계산기 종료 5를 입력해주세요: ")
+        if cal_num == '1':
+            x= int(input('x값을 입력해주세요:'))
+            y= int(input('y값을 입력해주세요:'))
+            print('덧셈 결과는 {}입니다'.format(x+y))
+            display.scroll(x+y)
+        if cal_num == '2':
+            x= int(input('x값을 입력해주세요:'))
+            y= int(input('y값을 입력해주세요:'))
+            print('뻴셈 결과는 {}입니다'.format(x-y))
+            display.scroll(x-y)
+        if cal_num == '3':
+            x= int(input('x값을 입력해주세요:'))
+            y= int(input('y값을 입력해주세요:'))
+            print('곱셈 결과는 {}입니다'.format(x*y))
+            display.scroll(x*y)
+        if cal_num == '4':
+            x= int(input('x값을 입력해주세요:'))
+            y= int(input('y값을 입력해주세요:'))
+            print('나눗셈 결과는 {}입니다'.format(x/y))
+            display.scroll(x/y)
+        if cal_num == '5':
+            continue #건너뛸 때 사용, 현재 if문을 건너 뛰고 다시 While True: 작동
+    if num == '3':
+        power.off()
 ```
 
 * 샘플코드_02
