--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -115,7 +115,7 @@ while True:
         if cal_num == '5':
             continue #건너뛸 때 사용, 현재 if문을 건너 뛰고 다시 While True: 작동
     if num == '3':
-        power.off()
+        power.off() #마이크로 비트 리셋버튼을 누르면 다시 작동
 ```
 
 * 샘플코드_02
