--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -120,6 +120,29 @@ while True:
 
 * 샘플코드_02
 ```
+from microbit import *
+
+#캘리브레이션이란? 소프트웨어나 하드웨어 시스템에서 캘리브레이션은 센서 데이터나 입력값을 조정하여 원하는 동작을 수행하도록 보정하는 과정
+#https://m.blog.naver.com/winglass/220987431370에서 자기장이 인체에 미치는 영향 작성
+compass.calibrate()
+on_a = False
+
+
+while True:
+    if button_a.was_pressed():
+        on_a = not on_a
+        sleep(200)
+    if on_a:
+        display. scroll('M_Value:', delay=50, wait=True, loop=False, monospace=False) #나노테슬라(nT) 단위로 측정
+        magnet_strength_all = compass.get_field_strength()
+        display.scroll(magnet_strength_all)
+        print(magnet_strength_all)
+        sleep(200)
+    else:
+        display.scroll('Compass', delay=50, wait=True, loop=False, monospace=False) #0-360도로 방위각 측정 
+        print(compass.heading())
+        sleep(200)
+        display.scroll(compass.heading())
 ```
 
 
@@ -131,7 +154,8 @@ while True:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    #나침반 내용 넣기 디스플레이스 방향출력
+    
     ```
   - GPT생성 코드
     ```
