--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -151,14 +151,41 @@ while True:
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - GPT프롬프트 템플릿
+  - GPT 리버스 프롬프트 엔지니어링을 위한 질문 단계
     ```
-  
+    리버스 프롬프트 엔지니어링을 활용
+    1) 다음 코드를 이해해주세요. 코드는 (x)에 넣겠습니다. 그리고 해당 코드를 바탕으로 다른 코드를 재설계 할꺼에요. (x)= 이해해기 샘플코드 2번
+    2) 위 코드를 설계하기 위해서 어떤 템플릿을 활용하는 것이 좋은지 추천해주세요. 템플릿은 4개 정도 요소로 작성해주세요.
+    3) GPT 답변(다를 수 있음)
+        1.목적 (Purpose):
+        코드의 목적을 간결하게 기술하세요. 이 코드가 무엇을 수행하는지 설명합니다.
+
+        2.필요한 라이브러리 및 모듈 (Libraries & Modules):
+        코드를 작성하는 데 필요한 외부 라이브러리나 모듈을 나열하세요. 이 코드에서는 마이크로비트와 시간 관련 라이브러리를 사용합니다.
+
+        3.주요 변수 및 데이터 구조 (Main Variables & Data Structures):
+        코드에서 사용할 주요 변수 및 데이터 구조를 정의하세요. 이 코드에서는 on_a와 magnet_strength_all 등의 변수를 사용합니다.
+
+        4.주요 기능 또는 알고리즘 (Main Functions or Algorithms):
+        코드의 핵심 기능 또는 알고리즘을 설명하세요. 이 코드에서는 A 버튼을 통한 모드 전환과 센서 데이터 측정이 핵심 기능입니다.
+
+  - GPT 프롬프트 템플릿
     ```
+    1.목적(Purpose): 마이크로 비트를 활용한 나침반(Compass) 만들기
+    2.필요한 라이브러리 및 모듈 (Libraries & Modules): microbit, 
+    3.주요 변수 및 데이터 구조 (Main Variables & Data Structures): direction, 
+    4.주요 기능 또는 알고리즘 (Main Functions or Algorithms):
+    ```  
   - GPT 프롬프트 템플릿 입력 내용
     ```
-    #나침반 내용 넣기 디스플레이스 방향출력
-    
+    1.목적(Purpose): 마이크로 비트를 활용한 나침반(Compass) 만들기
+    2.필요한 라이브러리 및 모듈 (Libraries & Modules): microbit,  
+    3.주요 변수 및 데이터 구조 (Main Variables & Data Structures): 
+      -방향 값을 저장하는 변수명은 direction을 사용. 
+      -마이크로 비트의 compass.heading()함수를 활용하여 그 데이터 값을 direction 변수에 저장하고 방향을 판단함.
+      -45-135 사이값은 East, 135-225 사이값은 South, 225-315 사이값은 West, 315-0 또는 0 -45 사이값은 North 로 출력
+    4.주요 기능 또는 알고리즘 (Main Functions or Algorithms): 
+      -출력은 display.scroll()함수 활용
     ```
   - GPT생성 코드
     ```
