--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -189,5 +189,40 @@ while True:
     ```
   - GPT생성 코드
     ```
-   
+    from microbit import *
+    
+    directions = ["North", "East", "South", "West"]
+    while True:
+        heading = compass.heading()
+    
+        if heading < 45 or heading >= 315:
+            direction = directions[0]  # North
+        elif heading < 135:
+            direction = directions[1]  # East
+        elif heading < 225:
+            direction = directions[2]  # South
+        else:
+            direction = directions[3]  # West
+    
+        display.scroll("Heading: " + str(heading) + " degrees", delay=100)
+        display.scroll("Direction: " + direction, delay=100)
+        sleep(1000)
+    ```
+
+    - GPT생성 코드 수정(리스트를 안배웠기 때문에)
+    ```
+    from microbit import *
+    
+    while True:
+        heading = compass.heading()
+    
+        if heading < 45 or heading >= 315:
+            display.scroll("North") # North
+        elif heading < 135:
+            display.scroll("East")  # East
+        elif heading < 225:
+            display.scroll("South")  # South
+        else:
+            display.scroll("West")  # West
+        sleep(1000)
     ```
