--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -1,15 +1,49 @@
 # for문 기초 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
-* 샘플코드_01
+### for문의 6가지 표현
+* 샘플코드_01-1
 ```
+from microbit import *
+
+#범위 내 반복
+for i in range(3):  
+    print(i)
+    display.scroll('hello')
 ```
-### 실습제목입력
+* 샘플코드_01-2
+```
+#범위 내 카운트
+from microbit import *
+
+for i in range(10):
+    print(i)
+    display.scroll(i)
+```
+* 샘플코드_01-3
+```
+#시작 값 지정 카운트
+from microbit import *
+
+for i in range(1,11):
+    print(i)
+    display.scroll(i)
+```
+* 샘플코드_01-4
+```
+from microbit import *
+
+#시작값 지정 카운트 및 건너뛰는 값 지정
+for i in range(1,50,2): #1-50까지 홀수만 출력
+    print(i)
+    display.scroll(i)
+```
+  - [런모어 질문] 1-50까지 짝수만 출력하는 코드는 어떻게 설계할까?
+### for문 활용 LED display.set_pixel() 출력하기
 * 샘플코드_02
 ```
 ```
 
-### 실습제목입력
+### 중첩 for문 활용하여 LED 애니메이션 만들기
 * 샘플코드_03
 ```
 ```
