Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -205,3 +205,26 @@ while True:
             break
         m.sleep(100)
 ```
+
+* 샘플코드_09: 1-10까지 수를 세고 10이 되면 도~2옥타브 도까지 노래를 부르는 코드 
+```
+from microbit import *
+import speech
+solfa = [
+    "#115DOWWWWWW",   # Doh
+    "#103REYYYYYY",   # Re
+    "#94MIYYYYYY",    # Mi
+    "#88FAOAOAOAOR",  # Fa
+    "#78SOHWWWWW",    # Soh
+    "#70LAOAOAOAOR",  # La
+    "#62TIYYYYYY",    # Ti
+    "#58DOWWWWWW",    # Doh
+]
+song = ''.join(solfa)
+
+for i in range(1,11):
+    display.show(i)
+    sleep(1000)
+    if i == 10:
+       speech.sing(song, speed=100)               
+```
