--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -30,14 +30,35 @@ for i in range(1,11):
 ```
 * 샘플코드_01-4
 ```
+#시작값 지정 카운트 및 건너뛰는 값 지정
 from microbit import *
 
-#시작값 지정 카운트 및 건너뛰는 값 지정
 for i in range(1,50,2): #1-50까지 홀수만 출력
     print(i)
     display.scroll(i)
 ```
   - [런모어 질문] 1-50까지 짝수만 출력하는 코드는 어떻게 설계할까?
+
+* 샘플코드_01-5
+```
+#끝값 지정 카운트 및 건너뛰는 값 음수 지정
+from microbit import *
+
+for i in range(100,0,-2):
+    print(i) #100부터 짝수만 출력
+    display.scroll(i, delay= 50)
+```
+
+* 샘플코드_01-6
+```
+#문자열 활용 for문 다루기
+from microbit import *
+
+for letter in 'micro:bit':
+    print(letter) #한 글자씩 출력
+    display.scroll(letter, delay=40)
+```
+
 ### for문 활용 LED display.set_pixel() 출력하기
 * 샘플코드_02
 ```
@@ -49,8 +70,75 @@ for i in range(1,50,2): #1-50까지 홀수만 출력
 ```
 
 ## 이해하기 샘플코드
-* 샘플코드_01
+* 샘플코드_01-1
+  - for문을 사용하여 0일 때 I를, 1일 때 love를, 2일대 GPT를 출력하고 종료되는 코드는?
 ```
+from microbit import *
+
+i=0
+for i in range(4):  
+    if i == 0:
+        print(i)
+        display.scroll('I')
+    elif i == 1:
+        print(i)
+        display.scroll('love')
+    elif i == 2:
+        print(i)
+        display.scroll('GPT')
+```
+* 샘플코드_01-2
+  - 아파트 동을 입력하고 마지막 호를 입력하면 전체 호를 출력하는 방법은?
+```
+from microbit import *
+
+dong = input('아파트 동을 입력하세요:')
+ho = int(input('입력한 동의 마지막 호수를 입력하세요:'))
+
+for i in range(ho):
+    print('{0}동 {1}호'.format(dong,  i+1))
+    display.scroll(i, delay=40)
+```
+* 샘플코드_01-3
+```
+from microbit import *
+import speech
+
+for i in range(1,3):
+    display.show(i)
+    sleep(1000)
+    if i == 2:
+       speech.say("Time is over",  speed=150, pitch=130, throat=100, mouth=190)
+```
+* 샘플코드_01-4
+```
+from microbit import *
+
+#시작값 지정 카운트 및 건너뛰는 값 지정
+for i in range(1,50,2): #1-50까지 홀수만 출력
+    print(i)
+    display.scroll(i)
+```
+  - [런모어 질문] 1-50까지 짝수만 출력하는 코드는 어떻게 설계할까?
+
+* 샘플코드_01-5
+```
+#끝값 지정 카운트 및 건너뛰는 값 음수 지정
+from microbit import *
+
+for i in range(100,0,-2):
+    print(i) #100부터 짝수만 출력
+    display.scroll(i, delay= 50)
+```
+
+* 샘플코드_01-6
+```
+#문자열 활용 for문 다루기
+from microbit import *
+
+for letter in 'micro:bit':
+    print(letter) #한 글자씩 출력
+    display.scroll(letter, delay=40)
 ```
 
 * 샘플코드_02
