--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -100,26 +100,29 @@ for i in range(ho):
     display.scroll(i, delay=40)
 ```
 * 샘플코드_01-3
+  - 20까지 카운팅하고 20초가 되면 Time is over를 말하는 장치를 설계하면?
 ```
 from microbit import *
 import speech
 
-for i in range(1,3):
+for i in range(1,21):
     display.show(i)
     sleep(1000)
-    if i == 2:
-       speech.say("Time is over",  speed=150, pitch=130, throat=100, mouth=190)
+    if i == 20:
+       speech.say('Time is over',  speed=150, pitch=130, throat=100, mouth=190)
 ```
 * 샘플코드_01-4
 ```
+#입력한 수까지 짝수의 합 구하는 코드를 설계하면?
 from microbit import *
-
-#시작값 지정 카운트 및 건너뛰는 값 지정
-for i in range(1,50,2): #1-50까지 홀수만 출력
-    print(i)
-    display.scroll(i)
+sum=0
+num = int(input('짝수의 합을 구할 끝값을 입력:'))
+for i in range(0,num+1,2):
+    sum = sum + i
+    if i >= num:
+        print(sum)
+        display.scroll(sum)
 ```
-  - [런모어 질문] 1-50까지 짝수만 출력하는 코드는 어떻게 설계할까?
 
 * 샘플코드_01-5
 ```
