--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -51,12 +51,17 @@ for i in range(100,0,-2):
 
 * 샘플코드_01-6
 ```
-#문자열 활용 for문 다루기
+#문자 입력하면 해당 글자수 찾아주는 
 from microbit import *
 
-for letter in 'micro:bit':
-    print(letter) #한 글자씩 출력
-    display.scroll(letter, delay=40)
+str = input('문자 입력:')
+find_str = input('카운팅 할 알파벳 입력:')
+num = 0
+for letter in str:
+    if letter == find_str:
+        num = num + 1
+print(num) #한 글자씩 출력
+display.scroll(num, delay=40)
 ```
 
 ### for문 활용 LED display.set_pixel() 출력하기
