--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -65,14 +65,35 @@ display.scroll(num, delay=40)
 ```
 
 ### for문 활용 LED display.set_pixel() 출력하기
-* 샘플코드_02
+* 샘플코드_02-1
 ```
+from microbit import *
+
+for x in range(5):
+    display.set_pixel(x, 0, 9)
+    sleep(100)
+```
+
+* 샘플코드_02-2
+```
+from microbit import *
+
+for y in range(5):
+    display.set_pixel(0, y, 9)
+    sleep(100)
 ```
 
 ### 중첩 for문 활용하여 LED 애니메이션 만들기
 * 샘플코드_03
 ```
+from microbit import *
+
+for x in range(5):
+    for y in range(5):
+        display.set_pixel(x, y, 9)
+        sleep(100)
 ```
+  - [런모어질문] x, y위치를 바꾸어 보면 어떻게 될까요?
 
 ## 이해하기 샘플코드
 * 샘플코드_01-1
