--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -169,24 +169,103 @@ for letter in 'micro:bit':
     print(letter) #한 글자씩 출력
     display.scroll(letter, delay=40)
 ```
-
 * 샘플코드_02
 ```
+#소리를 감지하면 LED 애니메이션이 한줄씩 나타나는 장치
+from microbit import *
+
+while True:
+    if microphone.current_event() == SoundEvent.LOUD:
+        for x in range(5):
+            for y in range(5):
+                display.set_pixel(x,y,9)
+                sleep(30)
+            display.clear()
+    else:
+        display.clear()
 ```
 
-* 샘플코드_03
+* 샘플코드_03-1
 ```
+#어떻게 작동되는지 상상해보자
+from microbit import*
+
+while True:
+    for y in range(5):
+      for x in range(5):
+         display.set_pixel(x,y,9)
+         display.set_pixel(x,x,9)
+         display.set_pixel(y,x,9)
+         display.set_pixel(y,y,9)
+         sleep(50)
+         display.clear()
+```
+
+* 샘플코드_03-2
+```
+#어떻게 작동되는지 상상해보자
+from microbit import*
+
+while True:
+  for x in range(4,-1,-1):
+      for y in range(4,-1,-1):
+         display.set_pixel(x,y,9)
+         display.set_pixel(x,x,9)
+         display.set_pixel(y,x,9)
+         display.set_pixel(y,y,9)
+         sleep(50)
+  for x in range(5):
+      for y in range(5):
+         display.set_pixel(x,y,5)
+         display.set_pixel(y,x,5)
+         sleep(50)
+         display.clear() 
 ```
 
 ## 적용하기 샘플코드
 * 샘플코드_01
+  - GPT리버스 프롬프트 엔지니어링 대화
+    ```
+    1)안녕하세요 마이크로비트를 알고 있나요?
+    2)코드 편집자 도우미 역할을 해주세요. 리버스 프롬프트 엔지니어링 기술을 활용하여 코드를 설계할 예정입니다.
+    3)(x)라는 변수 안에 제가 수정하려는 샘플 코드를 제시하겠습니다. 분석 부탁합니다.
+        (x)=from microbit import*
+        
+        while True:
+          for x in range(4,-1,-1):
+              for y in range(4,-1,-1):
+                 display.set_pixel(x,y,9)
+                 display.set_pixel(x,x,9)
+                 display.set_pixel(y,x,9)
+                 display.set_pixel(y,y,9)
+                 sleep(50)
+          for x in range(5):
+              for y in range(5):
+                 display.set_pixel(x,y,5)
+                 display.set_pixel(y,x,5)
+                 sleep(50)
+                 display.clear()
+    4)위 코드와 같은 마이크로 비트 LED 애니메이션을 설계하기 위해서는 어떤 '템플릿'을 바탕으로 요청할 수 있나요? 4가지 요소로 추출해주세요.
+    5)템플릿에 내용을 입력하여 제공합니다. 이해하고 코드를 설계해주세요.      
+    ```
   - GPT프롬프트 템플릿
     ```
-  
+    1.루프 구조: 
+    2.좌표 및 픽셀 설정:
+    3.대기 시간 및 지우기: 
+    4.:패턴 디자인:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    1.루프 구조: 무한 루프 형태로 작동
+    2.좌표 및 픽셀 설정: x는 0-5까지, y는 0부터 5까지 픽셀 구조로 이루어져 있음. 
+    3.대기 시간 및 지우기: 100ms로 설계, 3개의 LED픽셀이 켜지되 밝기의 단계에 따라 on되는 시간이 다름
+    4.:패턴 디자인: 
+      -LED 25개 중 1개의 픽셀 LED가 5단계의 밝기로 on,off를 반복하는 코드. 최대 밝기는 9로 제일 밝게 설정
+      -중첩 for문을 반드시 활용
+      -25개의 픽셀 LED좌표는 매번 바뀌어야 함. 매우 빠르게 바뀌어야 함.
+     -25개의 픽셀이 밝기에 차이를 두고 번갈아 가며 켜져야 함. 각 25개의 픽셀 LED는 켜지는 속도가 달라야함. 1개의 픽셀이 off되면 다른 1개가 반드시 on되어야 함.
+     -결과적으로 다양한 별들이 반짝이는 형태를 표현하고 싶음.
     ```
   - GPT생성 코드
     ```
