--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -269,5 +269,33 @@ while True:
     ```
   - GPT생성 코드
     ```
-   
+    from microbit import *
+    import random
+    
+    while True:
+        display.clear()
+        pixels = []  # 랜덤한 1개의 픽셀을 선택하기 위한 리스트
+        
+        # 랜덤한 1개의 픽셀을 선택
+        x = random.randint(0, 4)
+        y = random.randint(0, 4)
+        pixels.append((x, y))
+        
+        for _ in range(25):
+            for i, (x, y) in enumerate(pixels):
+                brightness = random.randint(0, 9)  # 0에서 9 사이의 랜덤한 밝기
+                display.set_pixel(x, y, brightness)
+                sleep(random.randint(50, 200))  # 랜덤한 속도로 켜짐
+                
+                # 다른 1개의 픽셀을 랜덤하게 꺼지게 만듭니다.
+                x_off, y_off = random.choice(pixels)
+                display.set_pixel(x_off, y_off, 0)
+                
+                # 새로운 랜덤한 픽셀을 선택합니다.
+                x = random.randint(0, 4)
+                y = random.randint(0, 4)
+                pixels[0] = (x, y)
+        
+        sleep(100)  # 다음 애니메이션을 시작하기 전에 잠시 대기합니다.
+
     ```
