--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -270,32 +270,15 @@ while True:
   - GPT생성 코드
     ```
     from microbit import *
-    import random
-    
-    while True:
-        display.clear()
-        pixels = []  # 랜덤한 1개의 픽셀을 선택하기 위한 리스트
-        
-        # 랜덤한 1개의 픽셀을 선택
-        x = random.randint(0, 4)
-        y = random.randint(0, 4)
-        pixels.append((x, y))
-        
-        for _ in range(25):
-            for i, (x, y) in enumerate(pixels):
-                brightness = random.randint(0, 9)  # 0에서 9 사이의 랜덤한 밝기
-                display.set_pixel(x, y, brightness)
-                sleep(random.randint(50, 200))  # 랜덤한 속도로 켜짐
-                
-                # 다른 1개의 픽셀을 랜덤하게 꺼지게 만듭니다.
-                x_off, y_off = random.choice(pixels)
-                display.set_pixel(x_off, y_off, 0)
-                
-                # 새로운 랜덤한 픽셀을 선택합니다.
-                x = random.randint(0, 4)
-                y = random.randint(0, 4)
-                pixels[0] = (x, y)
-        
-        sleep(100)  # 다음 애니메이션을 시작하기 전에 잠시 대기합니다.
 
+    while True:
+        for brightness in range(1, 10):
+            for x in range(5):
+                for y in range(5):
+                    # 각 픽셀을 해당 밝기로 설정합니다.
+                    display.set_pixel(x, y, brightness)
+                    # 대기 시간 설정
+                    sleep(100)
+                    # 현재 픽셀을 지우기 위해 밝기를 0으로 설정
+                    display.set_pixel(x, y, 0)
     ```
