--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -272,7 +272,7 @@ while True:
     from microbit import *
 
     while True:
-        for brightness in range(1, 10):
+        for brightness in range(1, 10, 2):
             for x in range(5):
                 for y in range(5):
                     # 각 픽셀을 해당 밝기로 설정합니다.
