--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -1,18 +1,23 @@
 # for문 심화 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
+### 표정 아이콘을 리스트로 저장하고 for문을 이용하여 출력하기
 * 샘플코드_01
 ```
 ```
-### 실습제목입력
+### 숫자 입력 카운트 다운 장치 만들기
 * 샘플코드_02
 ```
+from microbit import *
+import music
+
+num = int(input('카운팅 숫자 입력:'))
+for i in range(num, -1, -1):
+    display.show(i)
+    sleep(1000)
+    if i == 0:
+        audio.play(Sound.TWINKLE)
 ```
 
-### 실습제목입력
-* 샘플코드_03
-```
-```
 
 ## 이해하기 샘플코드
 * 샘플코드_01
