--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -3,6 +3,14 @@
 ### 표정 아이콘을 리스트로 저장하고 for문을 이용하여 출력하기
 * 샘플코드_01
 ```
+from microbit import *
+
+face = [Image.HAPPY,Image.SMILE,Image.SAD,Image.CONFUSED,Image.ANGRY,Image.ASLEEP,Image.SURPRISED]
+for i in face:
+    print(i)
+    display.show(i)
+    sleep(200)
+
 ```
 ### 숫자 입력 카운트 다운 장치 만들기
 * 샘플코드_02
