--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -6,9 +6,9 @@
 from microbit import *
 
 face = [Image.HAPPY,Image.SMILE,Image.SAD,Image.CONFUSED,Image.ANGRY,Image.ASLEEP,Image.SURPRISED]
-for i in face:
-    print(i)
-    display.show(i)
+for emotion in face:
+    print(emotion)
+    display.show(emotion)
     sleep(200)
 
 ```
