--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -22,7 +22,7 @@ num = int(input('카운팅 숫자 입력:'))
 for count_num in range(num, -1, -1):
     display.show(count_num)
     sleep(1000)
-    if i == 0:
+    if count_num == 0:
         audio.play(Sound.TWINKLE)
 ```
 
