--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -29,10 +29,12 @@ for count_num in range(num, -1, -1):
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 날씨(빛, 온도 측정)에 따른 감정 컨트롤 장치
 ```
 ```
 
 * 샘플코드_02
+  - a, b버튼을 활용하여 숫자 증감 설정하고, 로코 표시로 카운팅하는 장치, reset은 a+b버튼
 ```
 ```
 
