--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -34,7 +34,7 @@ for count_num in range(num, -1, -1):
 ```
 
 * 샘플코드_02
-  - a, b버튼을 활용하여 숫자 증감 설정하고, 로코 표시로 카운팅하는 장치, reset은 a+b버튼
+  - a, b버튼을 활용하여 숫자 증감 설정하고, 로고 표시로 카운팅하는 장치, reset은 a+b버튼
 ```
 ```
 
