--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -5,6 +5,7 @@
 ```
 from microbit import *
 
+#리스트 예습(안배움 아직)
 face = [Image.HAPPY,Image.SMILE,Image.SAD,Image.CONFUSED,Image.ANGRY,Image.ASLEEP,Image.SURPRISED]
 for emotion in face:
     print(emotion)
@@ -29,7 +30,7 @@ for count_num in range(num, -1, -1):
 
 ## 이해하기 샘플코드
 * 샘플코드_01
-  - 날씨(빛, 온도 측정)에 따른 감정 컨트롤 장치
+  - A - Z 까지 영어 단어 읽어주는 장치
 ```
 ```
 
