--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -32,6 +32,15 @@ for count_num in range(num, -1, -1):
 * 샘플코드_01
   - A - Z 까지 영어 단어 읽어주는 장치
 ```
+from microbit import *
+import speech
+
+alphabets =['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z']
+for alphabet in alphabets:
+    print(alphabet)
+    display.show(alphabet)
+    speech.say(alphabet, speed=160, pitch=110, throat=130, mouth=170)
+    sleep(200)
 ```
 
 * 샘플코드_02
