--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -44,8 +44,45 @@ for alphabet in alphabets:
 ```
 
 * 샘플코드_02
-  - a, b버튼을 활용하여 숫자 증감 설정하고, 로고 표시로 카운팅하는 장치, reset은 a+b버튼
+  - a, b버튼을 활용하여 숫자 증감(1-9초) 설정하고, 로고 터치로 -1초씩 카운팅하는 장치, reset은 a+b버튼
 ```
+from microbit import *
+import music
+
+# 초기 숫자와 최소, 최대 값 설정
+number = 0
+min_number = 0
+max_number = 9
+
+# 메인 루프
+while True:
+    # 현재 숫자를 디스플레이에 표시
+    display.show(str(number))
+    
+    # a 버튼 누르면 숫자 감소
+    if button_a.was_pressed():
+        number -= 1
+        if number < min_number:
+            number = max_number  # 숫자가 최소 값보다 작으면 최대 값으로 변경
+    
+    # b 버튼 누르면 숫자 증가
+    if button_b.was_pressed():
+        number += 1
+        if number > max_number:
+            number = min_number  # 숫자가 최대 값보다 크면 최소 값으로 변경
+    
+    # 로고 버튼 누르면 숫자 감소 및 소리 출력
+    if pin_logo.is_touched():
+        for i in range(number,-1,-1):
+            print(i) #100부터 짝수만 출력
+            display.show(i, delay= 0)
+            sleep(1000)
+            if i == 0:
+                music.play(music.BA_DING)  # 소리 재생
+                sleep(2000)
+
+    # 1초 동안 잠시 멈춤
+    sleep(100)
 ```
 
 
