--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -90,7 +90,9 @@ while True:
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
-  
+    #이전 대화 창에서 '기능'만 쿼리로 입력하여 1줄 제공해보기
+    #대화가 많아지면 이전 대화를 참조(데이터를 읽어오는)하는데 시간이 오래걸림. 그 때 '기능'정도만 입력해도 원하는 코드가 출력되는 것을 확인할 수 있음.
+    1.마이크로 비트 기능:   
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
