--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -90,15 +90,71 @@ while True:
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
-    #이전 대화 창에서 '기능'만 쿼리로 입력하여 1줄 제공해보기
+    #이전 대화 창(10장에서 사용했던 GPT 대화창)에서 '기능'만 쿼리로 입력하여 1줄 제공해보기
+    #프롬프트 엔지니어링 템플릿을 활용하지 않음
     #대화가 많아지면 이전 대화를 참조(데이터를 읽어오는)하는데 시간이 오래걸림. 그 때 '기능'정도만 입력해도 원하는 코드가 출력되는 것을 확인할 수 있음.
-    1.마이크로 비트 기능:   
+    1.마이크로 비트 기능:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
    
     ```
-  - GPT생성 코드
+  - GPT생성 코드_01
     ```
-   
+    from microbit import *
+
+    # Create a plus-shaped separator in the center
+    for i in range(5):
+        display.set_pixel(2, i, 4)
+        display.set_pixel(i, 2, 4)
+    
+    while True:
+        # x = y graph animation
+        for i in range(5):
+            display.set_pixel(i, 4 - i, 9)
+            sleep(200)  # Adjust the speed of the animation
+            display.set_pixel(i, 4 - i, 0)
+    
+        # x = -y graph animation
+        for i in range(5):
+            display.set_pixel(i, i, 9)
+            sleep(200)  # Adjust the speed of the animation
+            display.set_pixel(i, i, 0)
+    ```
+
+     - GPT생성 코드_02
+    ```
+    from microbit import *
+
+    # 중앙에 + 모양의 구분선 그리기
+    for i in range(5):
+        display.set_pixel(2, i, 4)
+        display.set_pixel(i, 2, 4)
+    
+    while True:
+        # y = x 그래프 애니메이션 (2,2를 중심으로 양방향)
+        for i in range(5):
+            x1, y1 = 2 + i, 2 - i
+            x2, y2 = 2 - i, 2 + i
+            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                display.set_pixel(x1, y1, 9)
+                display.set_pixel(x2, y2, 9)
+            sleep(200)  # 애니메이션 속도 조절
+            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                display.set_pixel(x1, y1, 0)
+                display.set_pixel(x2, y2, 0)
+    
+    
+        # y = -x 그래프 애니메이션 (2,2를 중심으로 양방향)
+        for i in range(5):
+            x1, y1 = 2 + i, 2 + i
+            x2, y2 = 2 - i, 2 - i
+            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                display.set_pixel(x1, y1, 9)
+                display.set_pixel(x2, y2, 9)
+            sleep(200)  # 애니메이션 속도 조절
+            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                display.set_pixel(x1, y1, 0)
+                display.set_pixel(x2, y2, 0)         
+        # 루프가 종료되면 애니메이션을 다시 시작합니다.
     ```
