--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -124,6 +124,7 @@ while True:
 
      - GPT생성 코드_02
     ```
+    #a버튼 누르면 y=x그래프, b버튼 누르면 y=-x그래프를 그리는 마이크로 비트 장치
     from microbit import *
 
     # 중앙에 + 모양의 구분선 그리기
@@ -133,28 +134,29 @@ while True:
     
     while True:
         # y = x 그래프 애니메이션 (2,2를 중심으로 양방향)
-        for i in range(5):
-            x1, y1 = 2 + i, 2 - i
-            x2, y2 = 2 - i, 2 + i
-            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
-                display.set_pixel(x1, y1, 9)
-                display.set_pixel(x2, y2, 9)
-            sleep(200)  # 애니메이션 속도 조절
-            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
-                display.set_pixel(x1, y1, 0)
-                display.set_pixel(x2, y2, 0)
+        if button_a.is_pressed():
+            for i in range(5):
+                x1, y1 = 2 + i, 2 - i
+                x2, y2 = 2 - i, 2 + i
+                if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                    display.set_pixel(x1, y1, 9)
+                    display.set_pixel(x2, y2, 9)
+                sleep(50)  # 애니메이션 속도 조절
+                if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                    display.set_pixel(x1, y1, 0)
+                    display.set_pixel(x2, y2, 0)
     
-    
-        # y = -x 그래프 애니메이션 (2,2를 중심으로 양방향)
-        for i in range(5):
-            x1, y1 = 2 + i, 2 + i
-            x2, y2 = 2 - i, 2 - i
-            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
-                display.set_pixel(x1, y1, 9)
-                display.set_pixel(x2, y2, 9)
-            sleep(200)  # 애니메이션 속도 조절
-            if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
-                display.set_pixel(x1, y1, 0)
-                display.set_pixel(x2, y2, 0)         
-        # 루프가 종료되면 애니메이션을 다시 시작합니다.
+        if button_b.is_pressed():
+            # y = -x 그래프 애니메이션 (2,2를 중심으로 양방향)
+            for i in range(5):
+                x1, y1 = 2 + i, 2 + i
+                x2, y2 = 2 - i, 2 - i
+                if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                    display.set_pixel(x1, y1, 9)
+                    display.set_pixel(x2, y2, 9)
+                sleep(50)  # 애니메이션 속도 조절
+                if 0 <= x1 < 5 and 0 <= y1 < 5 and 0 <= x2 < 5 and 0 <= y2 < 5:
+                    display.set_pixel(x1, y1, 0)
+                    display.set_pixel(x2, y2, 0)         
+            # 루프가 종료되면 애니메이션을 다시 시작합니다.
     ```
