--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -97,7 +97,13 @@ while True:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+   마이크로 비트 기능: 
+     1) 중복 for문 활용
+     2) 1차 함수 그래프를 display에 나타내는 마이크로 비트 코드
+     3) y=x 그래프와 y=-x 그래프를 버튼 A와 버튼 B로 선택하여 출력
+     4) 그래프는 2,2를 중심으로 양방향으로 펼쳐지는 애니메이션
+     5) 버튼을 누를 때마다 해당 그래프를 그리며, 애니메이션 속도 조절 가능
+
     ```
   - GPT생성 코드_01
     ```
