--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -97,19 +97,20 @@ while True:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   마이크로 비트 기능: 
+     #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천한다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있다.
+     마이크로 비트 기능: 
      1) 중복 for문 활용
      2) 1차 함수 그래프를 display에 나타내는 마이크로 비트 코드
      3) y=x 그래프와 y=-x 그래프를 버튼 A와 버튼 B로 선택하여 출력
      4) 그래프는 2,2를 중심으로 양방향으로 펼쳐지는 애니메이션
      5) 버튼을 누를 때마다 해당 그래프를 그리며, 애니메이션 속도 조절 가능
-
     ```
+
   - GPT생성 코드_01
     ```
     from microbit import *
 
-    # Create a plus-shaped separator in the center
+    #Create a plus-shaped separator in the center
     for i in range(5):
         display.set_pixel(2, i, 4)
         display.set_pixel(i, 2, 4)
@@ -128,9 +129,8 @@ while True:
             display.set_pixel(i, i, 0)
     ```
 
-     - GPT생성 코드_02
+  - GPT생성 코드_02
     ```
-    #a버튼 누르면 y=x그래프, b버튼 누르면 y=-x그래프를 그리는 마이크로 비트 장치
     from microbit import *
 
     # 중앙에 + 모양의 구분선 그리기
