--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -97,7 +97,9 @@ while True:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-     #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천한다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있다.
+     #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천한다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있다. 필자 또한 원하는 출력을 얻기위해 어려움을 겪었다. 챕터 10, 11에서 했던 대화 내용링크를 공유한다.
+     [GPT 대화 링크] https://chat.openai.com/share/3d4ead52-db6f-468c-8d31-80fdffb5299c
+    
      마이크로 비트 기능: 
      1) 중복 for문 활용
      2) 1차 함수 그래프를 display에 나타내는 마이크로 비트 코드
