--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -1,13 +1,69 @@
 # while문 기초 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
+### while의 다양한 조건 표현
 * 샘플코드_01
-```
-```
-### 실습제목입력
-* 샘플코드_02
-```
-```
+  ```
+  while True:
+  while 1==1:
+  while 1!=0:
+  while 'num'=='num':
+  while False:
+  while 13!='num':
+  while a==a: 
+  while 0<=a and a<10: 
+  while num<10:
+  while 1 in list:
+  ```
+
+
+  ```
+### while의 조건식 표현 예제
+* 샘플코드_01-1
+  - 기본형태: 가장 일반적인 형태로, 조건이 참인 동안 코드를 반복
+  ```
+  from microbit import*
+  count = 0
+  while count < 5:
+      display.scroll(count)
+      print(count)
+      count += 1
+  ```
+
+* 샘플코드_01-2
+  - 무한 루프: 조건이 항상 참이거나, 루프 내에서 조건을 변경하는 코드가 없을 경우 무한히 반복
+  ```
+  from microbit import *
+
+  while True:
+      display.scroll('infinite loop')
+      print('무한 반복')
+  ```
+  
+* 샘플코드_01-3
+  - else문과 함께 사용: while 루프가 정상적으로 종료되었을 때 실행되는 코드 블록을 포함
+  ```
+  from microbit import *
+
+  count = 0
+  while count < 5:
+      display.scroll(count)
+      print(count)
+      count += 1
+  else:
+      display.scroll('infinite over')
+      print('루프 종료')
+  ```
+* 샘플코드_01-4
+  - 중첩된 while문: 한 while문 내부에 다른 while문을 포함. 내부 루프는 외부 루프의 각 반복마다 실행.
+  ```
+  outer = 0
+  while outer < 3:
+      inner = 0
+      while inner < 3:
+          print('외부: {0}, 내부: {1}'.format(outer, inner))
+          inner += 1
+      outer += 1
+  ```
 
 ### 실습제목입력
 * 샘플코드_03
