--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -18,7 +18,7 @@
 
   ```
 ### while의 조건식 표현 예제
-* 샘플코드_01-1
+* 샘플코드_02-1
   - 기본형태: 가장 일반적인 형태로, 조건이 참인 동안 코드를 반복
   ```
   from microbit import*
@@ -29,7 +29,7 @@
       count += 1
   ```
 
-* 샘플코드_01-2
+* 샘플코드_02-2
   - 무한 루프: 조건이 항상 참이거나, 루프 내에서 조건을 변경하는 코드가 없을 경우 무한히 반복
   ```
   from microbit import *
@@ -39,7 +39,7 @@
       print('무한 반복')
   ```
   
-* 샘플코드_01-3
+* 샘플코드_02-3
   - else문과 함께 사용: while 루프가 정상적으로 종료되었을 때 실행되는 코드 블록을 포함
   ```
   from microbit import *
@@ -53,22 +53,48 @@
       display.scroll('infinite over')
       print('루프 종료')
   ```
-* 샘플코드_01-4
-  - 중첩된 while문: 한 while문 내부에 다른 while문을 포함. 내부 루프는 외부 루프의 각 반복마다 실행.
+* 샘플코드_02-4
+  - 중첩된 while문: 한 while문 내부에 다른 while문을 포함, 내부 루프는 외부 루프의 각 반복마다 실행
   ```
+  from microbit import *
+
   outer = 0
   while outer < 3:
       inner = 0
       while inner < 3:
-          print('외부: {0}, 내부: {1}'.format(outer, inner))
+          display.scroll('out: {}, in: {}'.format(outer, inner), delay=50)
+          print('외부: {}, 내부: {}'.format(outer, inner))
           inner += 1
       outer += 1
   ```
 
 ### 실습제목입력
-* 샘플코드_03
-```
-```
+* 샘플코드_03-1
+  - break문을 사용: 특정 조건에서 루프를 즉시 종료
+  ```
+  from microbit import *
+
+  count = 0
+  while count < 5:
+      if count == 3:
+          break
+      display.scroll(count)
+      print(count)
+      count += 1
+  ```
+* 샘플코드_03-1
+  - continue문을 사용: 특정 조건에서 루프의 나머지 부분을 건너뛰고 다음 반복으로 진행
+  ```
+  from microbit import *
+
+  count = 0
+  while count < 5:
+      count += 1
+      if count == 3:
+          continue
+      display.scroll(count)
+      print(count)
+  ```
 
 ## 이해하기 샘플코드
 * 샘플코드_01
