--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -98,7 +98,31 @@
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+* [런모어 질문] 조크 바이러스(Joke virus)란 무엇인가요?
 ```
+#간단한 조크 바이러스 만들어 보기
+from microbit import *
+
+# 사용자에게 긴박한 메시지 전달
+print("경고: 마이크로비트를 즉시 흔들지 않으면 컴퓨터가 꺼집니다!")
+
+# 마이크로비트 흔들림 감지 대기
+while True:
+    if accelerometer.was_gesture("shake"):
+        break
+    sleep(100)
+
+# 무한 반복 조크 바이러스
+while True:
+    for count in range(5, -1, -1):
+        display.show(str(count))
+        print(count)
+        sleep(1000)
+    while 1==1:
+        print("농담입니다! 😄")
+        display.scroll("It's joking!", delay=50)
+
+
 ```
 
 * 샘플코드_02
