--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -121,12 +121,30 @@ while True:
     while 1==1:
         print("농담입니다! 😄")
         display.scroll("It's joking!", delay=50)
-
-
 ```
 
 * 샘플코드_02
 ```
+#버튼 및 가속도 센서가 일정하게 작동되는 동안만 원하는 LED 이미지 반복 출력하기
+from microbit import *
+
+while True:
+    if button_a.is_pressed():
+        display.show(Image.HEART)
+    elif button_b.is_pressed():
+        display.show(Image.HAPPY)
+    elif pin_logo.is_touched():
+        display.show(Image.SAD)
+    elif accelerometer.current_gesture() == "up": #로고 위
+        display.show(Image.ARROW_N)
+    elif accelerometer.current_gesture() == "down": #로고 다운
+        display.show(Image.ARROW_S)
+    elif accelerometer.current_gesture() == "left": #로고 왼쪽
+        display.show(Image.ARROW_W)
+    elif accelerometer.current_gesture() == "right": #로고 오른쪽
+        display.show(Image.ARROW_E)    
+    else:
+        display.clear()
 ```
 
 * 샘플코드_03
