--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -149,6 +149,29 @@ while True:
 
 * 샘플코드_03
 ```
+from microbit import *
+
+jump_num=int(input('건너 뛰고  싶은 숫자를 1-10까지 입력해주세요:'))
+number = 1
+
+while True:
+    if number > 10:
+        number = 1
+        break
+
+    if number == jump_num:
+        number += 1
+        continue
+
+    display.show(str(number))
+    sleep(200)
+
+    if button_a.was_pressed():
+        number += 1
+    elif button_b.was_pressed():
+        number -= 1
+        if number < 1:
+            number = 10
 ```
 
 ## 적용하기 샘플코드
