--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -150,6 +150,7 @@ while True:
 * 샘플코드_03
 ```
 from microbit import *
+import music
 
 jump_num=int(input('건너 뛰고  싶은 숫자를 1-10까지 입력해주세요:'))
 number = 1
@@ -161,6 +162,7 @@ while True:
 
     if number == jump_num:
         number += 1
+        music.play(music.JUMP_UP)
         continue
 
     display.show(str(number))
