--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -180,13 +180,110 @@ while True:
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
-  
+    1)안녕하세요. 마이크로 비트와 파이썬(python) 언어를 알고 있나요?
+    2)코드 편집자 및 개발자 역할을 부탁할께요.
+    3)제가 두개의 코드를 조합하여 새로운 코드를 창작하려  합니다.
+    4)첫번째 코드 입니다. --> 이해하기 샘플코드 2번을 복사 붙여넣기 한다.
+    5)두번째 코드 입니다. --> 이해하기 샘플코드 3번을 복사 붙여넣기 한다.
+    6)첫 번재와 두번째 코드를 조합하여 당신이 창작한 새로운 창의적인 코드를 제시해 주세요.
+    7)다른 창의적인 코드를 설계 및 출력해주세요.(지속적으로 요청하며 다양한 코드를 받아낼 수 있다.)
     ```
+    
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    본 챕터에서는 프롬프트 템플릿을 사용하지 않는다. 두개의 코드를 학습시켜 새로운 코드를 받아내는 방법을 실습한다.
     ```
-  - GPT생성 코드
+    
+  - GPT생성 코드_01
     ```
-   
+    from microbit import *
+    import music
+    
+    jump_num = int(input('건너 뛰고 싶은 숫자를 1-10까지 입력해주세요:'))
+    number = 1
+    
+    while True:
+        if number < 0 or number > 10:
+            number = 1
+            break
+    
+        if number == jump_num:
+            display.show(Image.HEART)
+            music.play(music.JUMP_UP)
+            sleep(1000)
+            display.clear()
+        else:
+            display.show(str(number))
+    
+        sleep(200)
+    
+        if button_a.was_pressed():
+            number -= 1
+        elif button_b.was_pressed():
+            number += 1
+            if number > 10:
+                number = 1
     ```
+  - GPT생성 코드_02
+    ```
+    from microbit import *
+    import music
+    
+    number = 1
+    
+    while True:
+        if number < 1:
+            number = 10
+        elif number > 10:
+            number = 1
+    
+        if accelerometer.was_gesture('shake'):
+            number = 1  # 흔들 때마다 숫자를 1로 초기화
+            display.clear()
+            music.play(music.POWER_UP)
+    
+        display.show(str(number))
+    
+        if button_a.was_pressed():
+            number -= 1
+        elif button_b.was_pressed():
+            number += 1
+    
+        sleep(200)
+    ```
+
+   - GPT생성 코드_03
+    ```
+    from microbit import *
+    import random
+    
+    number = 1
+    
+    while True:
+        if accelerometer.was_gesture('shake'):
+            number = random.randint(1, 10)
+            display.clear()
+            if number == 1:
+                display.show(Image.HEART)
+                sleep(1000)
+            elif number == 2:
+                display.show(Image.SMILE)
+                sleep(1000)
+            elif number == 3:
+                display.show(Image.SAD)
+                sleep(1000)
+            # 이렇게 필요한 숫자에 따라 다양한 이미지로 표시할 수 있습니다.
+    
+        if button_a.was_pressed():
+            number -= 1
+        elif button_b.was_pressed():
+            number += 1
+    
+        if number < 1:
+            number = 10
+        elif number > 10:
+            number = 1
+    
+        display.show(str(number))
+        sleep(200)
+    ```    
