--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -1,9 +1,43 @@
 # while문 심화 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
-* 샘플코드_01
-```
-```
+### 라디오 통신 이해하기
+* 샘플코드_01-1
+  - 송신 코드
+  ```
+  import radio
+  from microbit import *
+  
+  radio.config(group=23)
+  radio.on()
+  
+  while True:
+      signal = input('보낼 신호를 선택해 주세요(1은 하트, 2는 해골):')
+      if signal == '1':
+          radio.send('1')
+      elif signal == '2':    
+          radio.send('2')
+      else:
+          display.clear()
+  ```
+  * 샘플코드_01-2
+    - 수신 코드
+    ```
+    import radio
+    from microbit import *
+    
+    radio.config(group=23)
+    radio.on()
+    while True:
+        signal = radio.receive()
+        if signal == '1':
+            display.show(Image.HEART)
+            sleep(1000)
+        elif signal == '2':
+            display.show(Image.SKULL)
+            sleep(1000)
+        else:
+            display.clear()
+    ```  
 ### 실습제목입력
 * 샘플코드_02
 ```
