--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -2,7 +2,7 @@
 ## 배우기 샘플코드
 ### 라디오 통신 이해하기
 * 샘플코드_01-1
-  - 송신 코드
+  - 송신(Send) 코드
   ```
   import radio
   from microbit import *
@@ -20,7 +20,7 @@
           display.clear()
   ```
   * 샘플코드_01-2
-    - 수신 코드
+    - 수신(Receive) 코드
     ```
     import radio
     from microbit import *
