--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -39,10 +39,33 @@
             display.clear()
     ```  
 ### 실습제목입력
-* 샘플코드_02
-```
-```
-
+* 샘플코드_02-1
+  - 송신(Send)코드
+  ```
+  from microbit import *
+  import radio
+  
+  radio.config(group=23, power=7)
+  radio.on()
+  
+  while True:
+      lv = microphone.sound_level()
+      if 0 <= lv <70:
+          radio.send('1')
+      elif 70 <= lv <125:  
+          radio.send('2')
+      elif 125 <= lv <190:
+          radio.send('3')
+      elif 190 <= lv <255:
+          radio.send('4')
+      else:
+          display.clear()
+  ```
+* 샘플코드_02-2
+  - 수신(Receive)코드
+  ```
+  
+  ```
 ### 실습제목입력
 * 샘플코드_03
 ```
