--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -68,7 +68,29 @@
 * 샘플코드_02-2
   - 수신(Receive)코드
   ```
+  from microbit import *
+  import radio
   
+  radio.config(group=23)
+  radio.on()
+  
+  while True:
+      signal = radio.receive()
+      lv= radio.receive()
+      if signal == '1':
+          print('sound_level:{}, silent'.format(lv))
+          sleep(1000)
+      elif signal == '2':
+          print('sound_level:{}, silent'.format(lv))
+          sleep(1000)
+      elif signal == '3':
+          print('sound_level:{}, silent'.format(lv))
+          sleep(1000)
+      elif signal == '4':
+          print('sound_level:{}, silent'.format(lv))
+          sleep(1000)
+      else:
+          display.clear()
   ```
 ### 실습제목입력
 * 샘플코드_03
