--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -52,16 +52,16 @@
       lv = microphone.sound_level()
       if 0 <= lv <70:
           radio.send('1')
-          radio.send(str(lv))
+          sleep(1000)
       elif 70 <= lv <125:  
           radio.send('2')
-          radio.send(str(lv))
+          sleep(1000)
       elif 125 <= lv <190:
           radio.send('3')
-          radio.send(str(lv))
+          sleep(1000)
       elif 190 <= lv <255:
           radio.send('4')
-          radio.send(str(lv))
+          sleep(1000)
       else:
           display.clear()
   ```
